--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="/images/Sem Título-1.jpg" type="image/x-icon">
 
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
