--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
               <h2>Sergio Guilherme Neto</h2>
 
               <button type="button">
-                <a href="https://www.linkedin.com/in/sergioguilhermeneto/">LinkedIn</a>
+                <img src="/images/linkedin.svg" alt="Seguir no...">
+                <a href="https://www.linkedin.com/in/sergioguilhermeneto/" target="_blank">  LinkedIn</a>
+
+                
               </button>
           </div>
 
